--- a/html/login.html
+++ b/html/login.html
@@ -54,7 +54,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="notices.html">Results</a>
+                        <a class="nav-link" href="results.html">Results</a>
                     </li>
                 </ul>
             </div>
